--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async": "^3.2.4",
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.0",
     "boxen": "^5.1.2",
